...
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationX="8dp"
        android:translationY="-51dp" />

    <TextView
        android:id="@+id/event_header"
        android:layout_width="409dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-thin"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal"
...

    <Space
        android:layout_width="10dp"
        android:layout_height="60dp" />

    <ListView
        android:id="@+id/attendee_event_list"
        android:layout_width="match_parent"
        android:layout_height="526dp"
        android:translationY="-391dp" />

</LinearLayout>
