...
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Administrator.EventEditorActivity">


    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_gravity="left"
        android:background="#00B5A9"
        android:gravity="left|center_vertical"
        android:text="  Back"
...
            android:text="TextView"
            android:textColor="#000000"
            android:textColorHighlight="#009688"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="0"
            android:text="Wanna come?"
            android:textStyle="bold" />
...
